# kon

./: AGENTS.md  Cargo.toml  README.md  build.sh  initial.md  install.sh
.github/workflows/: ci.yml  release.yml
.opencode/plans/: complete-ui-redesign.md  ui-fixes.md
.opencode/skills/ui_and_tui/: SKILL.md
src/: cli.rs  cmd.rs  config.rs  db.rs  main.rs  repl.rs  theme.rs
src/app/: completion.rs  connections.rs  editor.rs  event.rs  input.rs  mod.rs  settings.rs  state.rs
src/repl/: completion.rs  syntax.rs  ui.rs
src/tui/: bottom_bar.rs  completion.rs  connections.rs  editor.rs  format.rs  layout.rs  mod.rs  overlays.rs  settings.rs  syntax.rs  table.rs  top_bar.rs  vertical.rs
