[package]
name = "kon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"
inquire = "0.9"
sqlx = { version = "0.9", features = ["runtime-tokio", "mysql"] }
ratatui = "0.30"
crossterm = "0.29"
sqlparser = "0.62"
tokio = { version = "1", features = ["full"] }
